<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.nachiketvatkar.locateus.GroupColor"
    >

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:layout_marginTop="20dp"
        android:id="@+id/Grouper1"
        android:layout_below="@+id/textView2"
        android:layout_alignLeft="@+id/CheckGS"
        android:layout_alignStart="@+id/CheckGS">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/OrangeText"
            android:id="@+id/Orange"
            android:checked="false"
            android:elegantTextHeight="false"
            android:clickable="false"
            />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/PurpleText"
            android:id="@+id/Purple"
            android:checked="false"
            />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/GreenText"
            android:id="@+id/Green"
            android:checked="false"
            />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/RedText"
            android:id="@+id/Red"
            android:checked="false"
             />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/YellowText"
            android:id="@+id/Yellow"
            android:checked="false"
             />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/PinkText"
            android:id="@+id/Pink"
            android:checked="false"
          />

    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Choose Group Color "
        android:id="@+id/textView2"
        android:layout_marginTop="23dp"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/CheckGS"
        android:layout_alignEnd="@+id/CheckGS" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Check Group Status"
        android:id="@+id/CheckGS"
        android:layout_below="@+id/Grouper1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Back"
        android:id="@+id/Back"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="36dp" />

</RelativeLayout>
