<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#000000">

    <RadioGroup
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:layout_marginTop="102dp"
        android:id="@+id/radioGroup"
        android:layout_below="@+id/textView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Teacher"
            android:id="@+id/TeacherRadio"
            android:layout_gravity="center_horizontal"
            android:checked="false"
            android:textSize="@dimen/abc_action_bar_progress_bar_size"
            android:textColor="#FFFFFF"
            android:background="#333333" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Group"
            android:id="@+id/GroupRadio"
            android:layout_gravity="center_horizontal"
            android:checked="false"
            android:textSize="@dimen/abc_action_bar_progress_bar_size"
            android:textColor="#FFFFFF"
            android:background="#333333" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Enter User Type"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/abc_action_bar_progress_bar_size"
        android:textColor="#FFFFFF" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NextStep"
        android:id="@+id/IntroButton"
        android:textSize="@dimen/abc_action_bar_progress_bar_size"
        android:layout_marginTop="125dp"
        android:layout_below="@+id/radioGroup"
        android:layout_centerHorizontal="true"
        android:textColor="#FFFFFF"
        android:background="#333333"
        style="@style/AppTheme" />

</RelativeLayout>
